# IBM-Assignment

./: LICENSE  README.md
vizweb/: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
vizweb/recognition/: apps.py  forms.py  models.py  services.py  urls.py  views.py
vizweb/recognition/migrations/: 0001_initial.py  0002_auto_20201115_2126.py  0002_auto_20201116_0215.py  0003_auto_20201115_2141.py
vizweb/static/css/: base.css
vizweb/templates/: base.html  history.html  index.html
vizweb/vizweb/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
