[tool.poetry]
name = "vizweb"
version = "0.1.0"
description = ""
authors = ["callistachang <changcallista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.1.3"
ibm-watson = "^4.7.1"
Pillow = "^8.0.1"
boto3 = "^1.16.18"
django-storages = "^1.10.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.15.0"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
